--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "version": "1.0.0",
   "main": "main.js",
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jsdom": "^24.0.0"
   },
   "scripts": {
     "start": "node main.js",
