--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "esm": "^3.2.25",
+    "node-fetch": "^3.3.2",
     "nvm": "^0.0.4"
   },
   "name": "webcrawler",
@@ -10,7 +12,7 @@
     "jsdom": "^24.0.0"
   },
   "scripts": {
-    "start": "node main.js",
+    "start": "node --no-warnings main.js",
     "test": "jest"
   },
   "author": "",
